# SongDetails

./: .gitignore  CMakeLists.txt  README.md  qpm.json  qpm.shared.json  vcpkg.json
.github/workflows/: build-ndk.yml
cmake/: quest.cmake
include/: SongProto.pb.h  SongProto.proto  logging.hpp
include/Data/: DataGetter.hpp  SongDetailsContainer.hpp
scripts/: build.ps1  copy.ps1  ndk-stack.ps1
shared/: SongDetails.hpp  TagsMap.hpp  bshook-utils.hpp
shared/Data/: MapCharacteristic.hpp  MapDifficulty.hpp  MapMods.hpp  RankedStates.hpp  RankedStatus.hpp  Song.hpp  SongDifficulty.hpp  UploadFlags.hpp
src/: SongDetails.cpp  SongProto.pb.cc  TagsMap.cpp
src/Data/: DataGetter.cpp  Song.cpp  SongDetailsContainer.cpp  SongDifficulty.cpp
